# fastapi-o3-w3d4-async-sqlalchemy-project

./: .gitignore  pyproject.toml
database/: config.py  engine.py
scripts/: test_connection.py
